Form text cut off fixed

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -26,6 +26,8 @@
     padding: 16px;
     padding-bottom: 0;
     color: black;
+
+    line-height: normal;
 }
 
 .form__input--mensaje{
